--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 			<div class="col-xl-4">
 				<section class="main">
 					<a href="#">
-					<img src="https://telegra.ph/file/039e2aab4f82d60c23220.jpg" alt="img" style="object-fit: cover;">
+					<img src="https://telegra.ph/file/19348b60eae66a713c3ab.jpg" alt="img" style="object-fit: cover;">
 					</a>
-					<span>Kimzz Store</span>
+					<span>Pokcheq JR</span>
 					<p>~ Welcome To My Bio ~</p>
 				</section>
 			</div>
@@ -36,17 +36,15 @@
 						<div class="header_links">
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
-								<li class="nav_link"><a href="http://api.kimzzoffc.me/">Rest Api</a></li>
-								<li class="nav_link"><a href="https://website.kimzzstore.tech">Web Store</a></li>
+								<p>~ My Social Media ~</p>
 							</ul>
 						</div>
 					</nav>
 					<section class="main2">
 						<ul>
-							<li><a target="_blank" href="https://t.me/kimzzstore"><i class="fab fa-telegram"></i></a></li>
-							<li><a target="_blank" href="https://github.com/kimzzstore"><i class="fab fa-github"></i></a></li>
-							<li><a target="_blank" href="https://wa.me/60146351257"><i class="fab fa-whatsapp"></i></a></li>
-							<li><a target="_blank" href="https://instagram.com/kimzz.store"><i class="fab fa-instagram"></i></a></li>
+							<li><a target="_blank" href="https://www.youtube.com/@pocheq8867"><i class="fab fa-youtube"></i></a></li>
+							<li><a target="_blank" href="https://www.tiktok.com/@pocheq_jr?_t=8gnmIOL3iAp&_r=1"><i class="fab fa-tiktok"></i></a></li>
+							<li><a target="_blank" href="https://wa.me/601164497845"><i class="fab fa-whatsapp"></i></a></li>
 						</ul>
 					</section>
 				</header>
