--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a href="#">
 					<img src="https://telegra.ph/file/19348b60eae66a713c3ab.jpg" alt="img" style="object-fit: cover;">
 					</a>
-					<span>Pokcheq JR</span>
+					<span>Pocheq Jr</span>
 					<p>~ Welcome To My Bio ~</p>
 				</section>
 			</div>
@@ -35,8 +35,8 @@
 						</div>
 						<div class="header_links">
 							<ul class="nav_links">
-								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
-								<p>~ My Social Media ~</p>
+								<li class="nav_link"><a href="#" onClick="window.location.reload();">My Social Media</a></li>
+
 							</ul>
 						</div>
 					</nav>
